Fix references when containers are deleted/not allowed